feat: React,ReactDOMを追加

--- a/packages/react-ui/public/index.html
+++ b/packages/react-ui/public/index.html
@@ -4,16 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-    <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+    <script src="<%= htmlWebpackPlugin.options['React'] %>"></script>
+    <script src="<%= htmlWebpackPlugin.options['ReactDOM'] %>"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    </style>
+    <link rel="stylesheet" href="/main.css?a=1">
   </head>
   <body>
     <div id="root"></div>
